# Hegelian-AI-Framework

./: .gitignore  MODELS_USAGE_GUIDE.md  PYCHARM_SETUP.md  README.md  advanced_architecture.md  config.json  development_roadmap.md  install.bat  learning_plan.md  moral_evolution_history.json  progress_tracker.md  project_log.md  project_management.md  project_structure.md  pyproject.toml  requirements-minimal.txt  requirements-optional.txt  requirements.txt  research_knowledge_base.md  run_example.py  session_log.md  setup_guide.md  simple_advanced_report.json  start_server.py  test_api.py  test_integration.py  test_models_import.py  test_server.py  type_stub.py
ai_core/: __init__.py  action_library.py  advanced_antithesis_engine.py  advanced_synthesis_engine.py  antithesis_engine.py  antithesis_engine_simple.py  dialectical_engine.py  ethical_reasoning_framework.py  knowledge_graph.py  knowledge_graph_simple.py  metacognitive_monitor.py  monitoring.py  monitoring_simple.py  moral_calculus.py  moral_evolver.py  moral_profiler.py  philosophical_agent.py  synthesis_engine.py  synthesis_engine_simple.py  thesis_engine.py
ai_core/behavior_tree/: composites.py  leafs.py  node.py
ai_core/entities/: __init__.py  ai_entity.py  ai_entity_manager.py
backend/: __init__.py  config.py  database.py  dependencies.py  logging_config.py  main.py  monitoring.py
examples/: advanced_demo.py  ai_entity_demo.py  basic_demo.py  deep_ethical_reasoning_demo.py  natural_thinking_demo.py  philosophy_comparison.py  simple_demo.py
moral_npc_system/: __init__.py
(+46 files in other folders)
